--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
       </ul>
       <div class="media-icons">
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/mohit-rajak"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/in/mohitrajakofficial"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
