--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="text">
         <div class="text-one">Hello,</div>
         <div class="text-two">I'm Mohit Rajak</div>
-        <div class="text-three">Full Stack Web Developer</div>
+        <div class="text-three">Mern Stack Web Developer</div>
         <div class="text-four">From India</div>
       </div>
       <div class="button">
@@ -69,10 +69,7 @@
           <p>
             I am a passionate Full Stack Developer with a strong foundation in both front-end and back-end development. My expertise lies in creating dynamic, responsive, and scalable web applications using a variety of technologies. On the front-end, I work with HTML, CSS, JavaScript, and frameworks like React and Angular to build user-friendly interfaces. On the back-end, I am proficient in Node.js, Express, and databases such as MongoDB and MySQL, enabling me to develop robust and efficient server-side solutions.
 My journey as a developer has been driven by a desire to solve problems, continuously learn new technologies, and create meaningful digital experiences. I am experienced in working with RESTful APIs, integrating third-party services, and implementing authentication and security measures to ensure smooth and secure user interactions.
-I thrive in collaborative environments and enjoy turning ideas into fully functional web applications. I am committed to writing clean, maintainable code and always striving to improve both the user experience and application performance. As a Full Stack Developer, I am always looking for new challenges and opportunities to expand my skill set and contribute to innovative projects.
-          </p>
-          <div class="button">
-            <button>Download Resume</button>
+I thrive in collaborative environments and enjoy turning ideas into fully functional web applications.
           </div>
         </div>
       </div>
