--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I thrive in collaborative environments and enjoy turning ideas into fully functi
             What excites me most about development is its impact. Through code, I can create applications that improve productivity, enhance user experiences, and even change the way people live and work. There’s a deep sense of satisfaction in seeing my work come to life and knowing that it serves a purpose.</p>
           <div class="experience">
             <div class="num">
-              I completed my graduation in 2024, and I am now ready for jobs and internships. Currently, I am a fresher.</div>
+              I completed my graduation in 2024, and I am now ready for jobs and internships.</div>
             <div class="exp"></div>
           </div>
         </div>
